Display product->go to the desired product's page and press buy to pass the id to purchase handler

--- a/style.css
+++ b/style.css
@@ -5,3 +5,11 @@
 	text-align: center;
 	padding-top: 100px;
 }
+
+.product_view_button{
+	width: 500px;
+	height: 100px;
+	background-color: #858585;
+	text-align: center;
+	padding-top: 100px;
+}
