display auction type and added bid button on auctions

--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@
 	height: 25px;
 	background-color: #858585;
 	text-align: center;
-	
+}
 
+.bid_button{
+	width: 100px;
+	height: 25px;
+	background-color: #858585;
+	text-align: center;
 }
