--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .wrapper ul{
 	margin: 0;
 	margin-left: 250px;
-	margin-top: 100px;
+	margin-top: 10px;
 	padding: 0;
 	line-height: 30px;
 	
@@ -34,6 +34,19 @@
     
 
 }
+
+.header{
+	
+	width: 100%;
+	height: 50px;
+	background-color: #58D3F7;
+
+}
+.search{
+	margin-left: 800px;
+	margin-top: 50px;
+}
+
 .buy_button{
 	width: 100px;
 	height: 25px;
