--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 	margin: 0;
 	padding: 0;
 }
+body{
+	background: powderblue;
+}
 .wrapper ul{
 	margin: 0;
 	margin-left: 250px;
@@ -36,7 +39,7 @@
 }
 
 .header{
-	
+
 	width: 100%;
 	height: 50px;
 	background-color: #58D3F7;
