--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,21 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+select {
+  height: 44px;
+  font-size: 16px;
+  width: 100%;
+  margin-bottom: 10px;
+  -webkit-appearance: none;
+  background: #fff;
+  border: 1px solid #d9d9d9;
+  border-top: 1px solid #c0c0c0;
+  /* border-radius: 2px; */
+  padding: 0 8px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
 .login-card {
   padding: 40px;
   width: 274px;
