--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100);
+
 .wrapper{
 	margin: 0;
 	padding: 0;
 }
 body{
 	background: #66ffff;
+	font-family: 'Roboto', sans-serif;
 }
 
 hr{
@@ -49,13 +52,7 @@ hr{
 
 }
 
-.header{
 
-	width: 100%;
-	height: 50px;
-	background-color: #58D3F7;
-
-}
 .search{
 	margin-left: 800px;
 	margin-top: 50px;
